--- a/.github/workflows/pr-validate-code.yml
+++ b/.github/workflows/pr-validate-code.yml
@@ -15,7 +15,7 @@ jobs:
       - name: get black version
         run: |
           export VERSION=$(grep -Po 'black==\K.*' requirements_dev.txt)
-          echo "::set-env name=BLACK_VERSION::$VERSION"
+          echo "BLACK_VERSION=$VERSION" >> $GITHUB_ENV
       - name: run black
         uses: psf/black@stable
         with:
@@ -63,7 +63,7 @@ jobs:
       - name: get tflint version
         run: |
           export VERSION=$(cat .tflint-version)
-          echo "::set-env name=TFLINT_VERSION::$VERSION"
+          echo "TFLINT_VERSION=$VERSION" >> $GITHUB_ENV
       - name: tflint
         uses: reviewdog/action-tflint@v1.17.2
         with:
