--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,9 +1,9 @@
+anyio==3.6.2
 black==22.10.0
 coverage==6.5.0
-pip-licenses==4.0.1
+httpx==0.23.1
+pip-licenses==4.0.2
 pre-commit==2.20.0
 pytest==7.2.0
-pytest-asyncio==0.20.2
 pytest-cov==4.0.0
 python-dateutil==2.8.2
-requests==2.28.1
