--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,8 +6,32 @@ on:
       - main
 
 jobs:
+  push-new-image:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - name: checkout
+        uses: actions/checkout@v3
+      - name: get image id
+        run: |
+          export IMAGE_ID=$(echo "ghcr.io/${{ github.repository }}:latest" | tr "[:upper:]" "[:lower:]")
+          echo "IMAGE_ID=$IMAGE_ID" >> $GITHUB_ENV
+      - name: build prod image
+        run: |
+          docker build . --target prod-env -t ${{ env.IMAGE_ID}} --label "run=${GITHUB_RUN_ID}"
+      - name: log in to github registry
+        run: |
+          echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u $ --password-stdin
+      - name: push image to github registry
+        run: |
+          docker push ${{ env.IMAGE_ID}}
+
   terraform-apply-dev:
     runs-on: ubuntu-latest
+    needs:
+      - push-new-image
     steps:
       - name: checkout
         uses: actions/checkout@v3
