feat(auth): add support for jwt tokens

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       context: .
       target: prod-env
     environment:
+      APP_KEY: ${APP_KEY:-changeme}
       DB_PASS: ${DB_PASS:-changeme}
     ports:
       - '8000:8000'
