--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,6 +13,12 @@ repos:
   rev: 22.10.0
   hooks:
   - id: black
+- repo: https://github.com/pre-commit/mirrors-mypy
+  rev: v0.991
+  hooks:
+  - id: mypy
+    additional_dependencies:
+      - types-python-dateutil
 - repo: https://github.com/gruntwork-io/pre-commit
   rev: v0.1.17
   hooks:
