--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,7 +18,13 @@ repos:
   hooks:
   - id: mypy
     additional_dependencies:
-      - types-python-dateutil
+    - types-python-dateutil
+- repo: https://github.com/PyCQA/flake8
+  rev: '6.0.0'
+  hooks:
+  - id: flake8
+    additional_dependencies:
+    - flake8-bugbear
 - repo: https://github.com/gruntwork-io/pre-commit
   rev: v0.1.17
   hooks:
@@ -26,4 +32,4 @@ repos:
   - id: terraform-fmt
   - id: tflint
     args:
-      - "--module"
+    - "--module"
