--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,6 +9,10 @@ repos:
   - id: check-merge-conflict
   - id: check-symlinks
   - id: requirements-txt-fixer
+- repo: https://github.com/pycqa/isort
+  rev: 5.11.4
+  hooks:
+  - id: isort
 - repo: https://github.com/psf/black
   rev: 22.10.0
   hooks:
