--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,39 +1,47 @@
 repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v2.3.0
+  # rev: v4.4.0
+  rev: f71fa2c1f9cf5cb705f73dffe4b21f7c61470ba9
   hooks:
-  - id: check-yaml
-  - id: end-of-file-fixer
-  - id: trailing-whitespace
-  - id: forbid-new-submodules
+  - id: check-added-large-files
+  - id: check-case-conflict
   - id: check-merge-conflict
   - id: check-symlinks
+  - id: check-yaml
+  - id: end-of-file-fixer
+  - id: forbid-submodules
   - id: requirements-txt-fixer
+  - id: trailing-whitespace
 - repo: https://github.com/pycqa/isort
-  rev: 5.11.4
+  # rev: 5.11.4
+  rev: 98390f5fde8f904f16a4e290a2aabed80d0951dc
   hooks:
   - id: isort
 - repo: https://github.com/psf/black
-  rev: 22.10.0
+  # rev: 22.12.0
+  rev: 2ddea293a88919650266472186620a98a4a8bb37
   hooks:
   - id: black
 - repo: https://github.com/pre-commit/mirrors-mypy
-  rev: v0.991
+  # rev: v0.991
+  rev: 0b037c2b59aa62dc3be3287d175295f1a5547eb9
   hooks:
   - id: mypy
     additional_dependencies:
-    - types-python-dateutil
+    - 'types-python-dateutil==2.8.19.5'
 - repo: https://github.com/PyCQA/flake8
-  rev: '6.0.0'
+  # rev: 6.0.0
+  rev: b9a7794c4f425ef8419081e6993f99419cc667ea
   hooks:
   - id: flake8
     additional_dependencies:
-    - flake8-bugbear
+    - 'flake8-bugbear==23.1.14'
 - repo: https://github.com/gruntwork-io/pre-commit
-  rev: v0.1.17
+  # rev: v0.1.17
+  rev: 1722bf6a0804bf5357f4c49da4b80bfc875f1697
   hooks:
   - id: terraform-validate
   - id: terraform-fmt
   - id: tflint
     args:
-    - "--module"
+    - '--module'
