--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -36,6 +36,13 @@ repos:
   - id: flake8
     additional_dependencies:
     - 'flake8-bugbear==23.1.14'
+- repo: https://github.com/Lucas-C/pre-commit-hooks-safety
+  # rev: v1.3.1
+  rev: a4a1eb373d8e809534a46855a58be427a0a29219
+  hooks:
+  - id: python-safety-dependencies-check
+    args:
+    - '--disable-telemetry'
 - repo: https://github.com/gruntwork-io/pre-commit
   # rev: v0.1.17
   rev: 1722bf6a0804bf5357f4c49da4b80bfc875f1697
