chore(actions): set top-level permissions to read-all

--- a/.github/workflows/pr-validate-python-code.yml
+++ b/.github/workflows/pr-validate-python-code.yml
@@ -13,6 +13,8 @@ on:
       - requirements.txt
       - requirements_dev.txt
 
+permissions: read-all
+
 jobs:
   python-black:
     runs-on: ubuntu-latest
