--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -41,6 +41,11 @@ repos:
   - id: flake8
     additional_dependencies:
     - 'flake8-bugbear==23.1.14'
+- repo: https://github.com/PyCQA/bandit
+  # rev: 1.7.4
+  rev: 1ed79063e3672a1c6d91ee27cb648e07a7465344
+  hooks:
+  - id: bandit
 - repo: https://github.com/Lucas-C/pre-commit-hooks-safety
   # rev: v1.3.1
   rev: a4a1eb373d8e809534a46855a58be427a0a29219
