--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,5 @@
-[isort]
-# Recommended by black authors
-profile = black
-
 [flake8]
+# It doesn't support pyproject.toml yet
 max-line-length = 120
 # Recommended by black authors
 select = C, E, F, W, B, B950
