feat(cicd): better build processes

--- a/.github/workflows/pr-validate-python-code.yml
+++ b/.github/workflows/pr-validate-python-code.yml
@@ -7,7 +7,7 @@ on:
       - synchronize
     paths:
       - .github/workflows/pr-validate-python-code.yml
-      - Dockerfile
+      - docker/Dockerfile.web
       - tests/**
       - src/**
 
