--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -3,8 +3,7 @@ ci:
   - .github/**
   - .pre-commit-config.yaml
   - pre-commit-hook.sh
-  - Dockerfile
-  - docker-compose.yml
+  - docker/*
   - Makefile
 
 infra:
